--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "@tanstack/react-router": "^1.34.0",
     "@tanstack/router-devtools": "^1.34.0",
     "@tauri-apps/api": "1.5.6",
+    "ace-builds": "^1.34.2",
     "dotenv": "^16.4.5",
     "i18next": "^23.11.5",
     "i18next-browser-languagedetector": "^8.0.0",
     "react": "^18.3.1",
+    "react-ace": "^11.0.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^14.1.2"
   },
