--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@tanstack/react-router": "^1.34.0",
     "@tanstack/router-devtools": "^1.34.0",
     "@tauri-apps/api": "1.5.6",
+    "@types/react-resizable": "^3.0.7",
     "ace-builds": "^1.34.2",
     "dotenv": "^16.4.5",
     "i18next": "^23.11.5",
@@ -30,7 +31,9 @@
     "react": "^18.3.1",
     "react-ace": "^11.0.1",
     "react-dom": "^18.3.1",
-    "react-i18next": "^14.1.2"
+    "react-i18next": "^14.1.2",
+    "react-resizable": "^3.0.5",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.3.0",
