--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@tauri-apps/api": "1.5.6",
     "@types/react-resizable": "^3.0.7",
     "ace-builds": "^1.34.2",
+    "ag-grid-react": "^31.3.2",
     "dotenv": "^16.4.5",
     "i18next": "^23.11.5",
     "i18next-browser-languagedetector": "^8.0.0",
