--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -17,7 +17,7 @@ tauri-build = { version = "1.5.2", features = [] }
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.6.5", features = [ "window-show", "window-maximize", "window-close", "window-start-dragging", "window-minimize", "window-hide", "window-unmaximize", "window-unminimize", "dialog-open"] }
+tauri = { version = "1.6.5", features = [ "dialog-save", "window-show", "window-maximize", "window-close", "window-start-dragging", "window-minimize", "window-hide", "window-unmaximize", "window-unminimize", "dialog-open"] }
 aws-config = "1.5.1"
 aws-sdk-dynamodb = "1.33.0"
 tokio = { version = "1.38.0", features = ["full"] }
