chore: rename request service to workspace service

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "vite",
     "lint:eslint": "eslint . --report-unused-disable-directives --max-warnings 0",
     "lint:prettier": "prettier . --check",
-    "lint": "npm run lint:eslint && npm run lint:prettier",
+    "lint:typescript": "tsc --noEmit",
+    "lint": "npm run lint:eslint && npm run lint:prettier && npm run lint:typescript",
     "prepare": "husky",
     "preview": "vite preview",
     "test": "vitest",
