feat: build binaries artifacts

--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -36,4 +36,6 @@ jobs:
     name: 'Build'
     uses: jrposada/github-actions/.github/workflows/tauri-build.yml@feat/tauri
     with:
+      artifact-path-1: ./src-tauri/target/release/bundle
+      artifact-name-1: binary
       script: tauri build
