--- a/.releaserc
+++ b/.releaserc
@@ -5,6 +5,20 @@
     "plugins": [
         "@semantic-release/commit-analyzer",
         "@semantic-release/release-notes-generator",
-        "@semantic-release/github"
+        [
+            "@semantic-release/github",
+            {
+                "assets": [
+                    {
+                        "path": "./src-tauri/target/release/bundle/dmg",
+                        "label": "Mac OS"
+                    },
+                    {
+                        "path": "./src-tauri/target/release/bundle/msi",
+                        "label": "Windows"
+                    }
+                ]
+            }
+        ]
     ]
 }
