--- a/.releaserc
+++ b/.releaserc
@@ -1,6 +1,10 @@
 {
     "branches": [
-        "main"
+        "main",
+        {
+            "name": "main",
+            "prerelease": "beta"
+        }
     ],
     "plugins": [
         "@semantic-release/commit-analyzer",
