--- a/.releaserc
+++ b/.releaserc
@@ -1,6 +1,10 @@
 {
     "branches": [
-        "main"
+        "main",
+        {
+            "name": "main",
+            "prerelease": "beta"
+        }
     ],
     "plugins": [
         "@semantic-release/commit-analyzer",
@@ -10,11 +14,15 @@
             {
                 "assets": [
                     {
-                        "path": "./src-tauri/target/release/bundle/dmg/*.dmg",
-                        "label": "Mac OS"
+                        "path": "./binaries/macos-latest/*.dmg",
+                        "label": "Mac OS (Apple Silicon)"
                     },
                     {
-                        "path": "./src-tauri/target/release/bundle/msi/*.msi",
+                        "path": "./binaries/macos-13/*.dmg",
+                        "label": "Mac OS (Intel)"
+                    },
+                    {
+                        "path": "./binaries/macos-latest/*.msi",
                         "label": "Windows"
                     }
                 ]
