--- a/.releaserc
+++ b/.releaserc
@@ -1,6 +1,5 @@
 {
     "branches": [
-        "main",
         {
             "name": "main",
             "prerelease": "beta"
@@ -22,7 +21,7 @@
                         "label": "Mac OS (Intel)"
                     },
                     {
-                        "path": "./binaries/macos-latest/*.msi",
+                        "path": "./binaries/windows-latest/*.msi",
                         "label": "Windows"
                     }
                 ]
