--- a/.releaserc
+++ b/.releaserc
@@ -1,8 +1,9 @@
 {
     "branches": [
+        "main",
         {
-            "name": "main",
-            "prerelease": "beta"
+            "name": "beta",
+            "prerelease": true
         }
     ],
     "plugins": [
