--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jrposada/aws-client",
-  "version": "0.0.0",
+  "version": "2.0.2-alpha",
   "type": "module",
   "scripts": {
     "build": "tsc && vite build",
