--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -39,14 +39,14 @@ jobs:
     permissions:
       contents: write
       pull-requests: write
-    uses: jrposada/github-actions/.github/workflows/semantic-release.yml@feat/tauri-build-version
+    uses: jrposada/github-actions/.github/workflows/semantic-release.yml@v1
     with:
       dry-run: true
 
   build:
     name: 'Build'
     needs: ['get-version']
-    uses: jrposada/github-actions/.github/workflows/tauri-build.yml@feat/tauri-build-version
+    uses: jrposada/github-actions/.github/workflows/tauri-build.yml@v1
     with:
       version: ${{ needs.get-version.outputs.version }}
       bundle-folder: ./src-tauri/target/release/bundle
