--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -22,6 +22,9 @@ aws-config = "1.5.1"
 aws-sdk-dynamodb = "1.33.0"
 tokio = { version = "1.38.0", features = ["full"] }
 aws-sdk-rdsdata = "1.31.0"
+log = "0.4.21"
+fern = "0.6.2"
+chrono = "0.4.38"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
