--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "dotenv": "^16.4.5",
     "i18next": "^23.11.5",
     "i18next-browser-languagedetector": "^8.0.0",
+    "notistack": "^3.0.1",
     "react": "^18.3.1",
     "react-ace": "^11.0.1",
     "react-dom": "^18.3.1",
